--- a/css/pages.css
+++ b/css/pages.css
@@ -126,6 +126,15 @@ a {
   text-shadow: #0090ff 0px 0px 2px;
 }
 
+
+.home-page-logo{
+      width:300px;
+      height:300px;
+      float:left;
+      margin:0px 30px 20px 0px;
+      background-image: url('../img/home-page-logo.png');
+}
+
 footer a:hover {
   color: #43adff;
   text-shadow: #0090ff 0px 0px 2px;
@@ -283,7 +292,7 @@ Full-Width Styles
 
 .inner {
   position: relative;
-  max-width: 970px;
+  max-width: 90%;
   padding: 0px 10px;
   margin: 0 auto;
 }
@@ -378,6 +387,7 @@ Full-Width Styles
   background: #f2f2f2;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
+  float:left;
 }
 
 
@@ -385,7 +395,9 @@ Full-Width Styles
   background: #212121;
 }
 
-
+.copyright{
+      float:left;
+}
 
 
 /*******************************************************************************
